support/error/src/main/kotlin/com/example/demo/support/error/converter/ExceptionConverter.kt
package com.example.demo.support.error.converter

import com.example.demo.support.error.exception.CustomException

interface ExceptionConverter<T> {
    fun support(throwable: Throwable): Boolean
    fun convert(ex: T): CustomException
}
